contrast fixed

--- a/webShop/style.css
+++ b/webShop/style.css
@@ -127,7 +127,7 @@ header{
     line-height: 39px;
 }
 .red {
-    color: #F16D7F;
+    color: #eb0827;
 }
 
 .burger-menu {
@@ -229,7 +229,7 @@ header{
     line-height: 19px;
 }
 
-.category h4 {
+.category h3 {
     color: #F16D7F;
     text-align: center;
     font-size: 24px;
@@ -353,9 +353,9 @@ button {
     height: 48px;
     flex-shrink: 0;
     margin-bottom: 95px;
-    border:solid 1px #FF6A6A;
+    border:solid 1px #eb0827;
     background: none;
-    color: #F26376;
+    color: #eb0827;
     font-size: 16px;
     font-weight: 400;
     line-height: 19px;
